<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.startupmentor.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_chat"
            app:destination="@id/navigation_chat" />
    </fragment>

    <fragment
        android:id="@+id/navigation_mentors"
        android:name="com.example.startupmentor.ui.mentors.MentorListFragment"
        android:label="@string/mentors"
        tools:layout="@layout/fragment_mentor_list" />

    <fragment
        android:id="@+id/navigation_sessions"
        android:name="com.example.startupmentor.ui.sessions.SessionsFragment"
        android:label="@string/sessions"
        tools:layout="@layout/fragment_sessions" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.startupmentor.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.startupmentor.ui.chat.ChatFragment"
        android:label="Chat"
        tools:layout="@layout/fragment_chat" />
</navigation>